Simplify NotificationService